# Net_Guard

./: .gitignore  README.md
core-c/: CMakeLists.txt
core-c/include/: netguard_core.h  netguard_internal.h
core-c/src/: detection_engine.c  flow_tracker.c  ipc_bridge.c  memory_pool.c  packet_capture.c  protocol_parser.c  ring_buffer.c  tls_fingerprint.c
rules/: malware_signatures.json  port_scans.json  web_attacks.json
ui-csharp/NetGuard.Core/: NativeMethods.cs  NetGuard.Core.csproj  PacketEngine.cs
ui-csharp/NetGuard.Core/Models/: Models.cs
ui-csharp/NetGuard.Core/NativeInterop/: NativeApi.cs
ui-csharp/NetGuard.Core/Services/: CaptureService.cs
ui-csharp/NetGuard.UI/: App.xaml  App.xaml.cs  Converters.cs  NetGuard.UI.csproj
ui-csharp/NetGuard.UI/Services/: AlertRepository.cs  AnomalyService.cs  DatabaseService.cs  EmailService.cs  FirewallService.cs  MLService.cs
ui-csharp/NetGuard.UI/ViewModels/: DashboardViewModel.cs  ForensicsViewModel.cs  MainViewModel.cs  RulesViewModel.cs  SettingsViewModel.cs
ui-csharp/NetGuard.UI/Views/: DashboardView.xaml  DashboardView.xaml.cs  ForensicsView.xaml  ForensicsView.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RulesView.xaml  RulesView.xaml.cs  SettingsView.xaml  SettingsView.xaml.cs
